tests/syntax/bad/testfile-lexing-5.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

    void m() { int i = 0; i +/**/= 10; }
